# git-copyright-analyzer

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  Roadmap.md  pyproject.toml
docs/: architecture.md
src/gca/: cli.py  database.py  gitcommit.py  gitcommitparser.py  gitlog.py  gitlogparser.py  gitrepository.py  models.py  reports.py  scanner.py  schema.py  timing.py
src/gca/company/: builtin.yaml  cli.py  company.py  config.py  discover.py  mapper.py  models.py  prompt.py  repository.py  rules.py  schema.py  yaml.py
src/gca/files/: cli.py  reports.py  schema.py
src/gca/headers/: cli.py  database.py  models.py  parser.py  reports.py  scanner.py  schema.py
